<resources>

    <!--Customizable String Entries. Change these values as appropriate-->
    <string name="app_name">RadioCore 100.0 FM</string>
    <string name="station_online">RadioCore Online</string>
    <string name="org_website">https://www.foreverrafs.com/radiocore</string>
    <string name="org_email">info@radiocore.com</string>
    <string name="org_phone">+233554314080</string>
    <string name="org_name">RadioCore Online</string>
    <string name="live_radio_freq">Live Radio - 100.0FM</string>
    <string name="website_and_value">Website: https://www.foreverafs.com/radiocore</string>
    <string name="email_and_value">Email: info@radiocore.com</string>
    <string name="phone_and_value">Phone: +233554314080</string>

    <!--Acivity Titles-->
    <string name="activity_news_title">RadioCore News</string>
    <!--End of Activity Titles-->

    <!--End of Customizable String Entries-->

    <!--Menu Actions-->
    <string name="action_settings">Settings</string>
    <!--End of Menu Actions-->


    <!--Custom News Item-->
    <string name="news_custom_headline">I\'ll never abolish free education because it\'s good - Mahama</string>
    <string name="news_custom_default_text">Avengers: Age of Ultron</string>
    <string name="news_custom_date">March 1, 2019</string>
    <string name="news_custom_content">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus porta lor
        em sed porttitor maximus. Suspendisse tincidunt eleifend ipsum et vestibulum. In h
        ac habitasse platea dictumst. Suspendisse volutpat blandit ultrices. Sed eget velit id sa
        pien congue tempus. Suspendisse potenti. Fusce tempus mollis velit biben
        dum malesuada. Curabitur quis dui eu nisi ultrices malesuada vel ut orci.
    </string>
    <!--End of custom news Item-->


    <string name="mission_statement">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus porta lor
        em sed porttitor maximus. Suspendisse tincidunt eleifend ipsum et vestibulum. In h
        ac habitasse platea dictumst. Suspendisse volutpat blandit ultrices. Sed eget velit id sa
        pien congue tempus. Suspendisse potenti. Fusce tempus mollis velit biben
        dum malesuada. Curabitur quis dui eu nisi ultrices malesuada vel ut orci.
    </string>


    <!--imageUrl content descriptions-->
    <string name="desc_small_play_button">play button on bottom sheet</string>
    <string name="desc_image_no_internet">No Internet image</string>
    <string name="desc_swipe_up_handle">swipe up handle</string>
    <string name="desc_whatsapp_icon">Whatsapp Icon</string>
    <string name="desc_station_logo">FM Station Logo</string>
    <string name="desc_news_image">News Image</string>

    <!--End of imageUrl content descriptions-->

    <string name="retry">RETRY</string>
    <string name="home_banner_image">home banner image</string>
    <string name="title_activity_settings">Settings</string>


    <string name="no_internet_connection">No internet connection found. Check connection or try again</string>

    <!--Misc-->
    <string name="whoops">Whoops!</string>
    <string name="share">Share</string>
    <string name="contact">Contact</string>
    <string name="mission">Mission</string>

    <!--End of Misc-->


    <!--Preferences key Strings-->
    <string name="auto_play_on_start_key">com.radiocore.settings.auto_play_on_start</string>
    <string name="auto_play_on_start">Autoplay on start</string>
    <string name="stream_duration_key">com.radiocore.settings.stream_duration</string>
    <!--End of Preference key Strings-->

    <!--Preference Titles-->
    <string name="pref_title_stream_duration">Stream Duration</string>
    <string name="pref_title_stream_timer">Radio Timer</string>
    <string name="pref_title_news_fetch_delay">News Fetch Delay</string>
    <!--End of Preference Titles-->

    <!--Playback states-->
    <string name="state_buffering">Buffering…</string>
    <string name="state_live">Live Online</string>
    <string name="state_stopped">Stopped</string>
    <string name="state_paused">Paused</string>
    <!--End of Playback states-->

    <string name="news_custom_category">Sport</string>
    <string name="next_button_desc">Next Button Desc</string>
    <string name="desc_play_button">Play Button Desc</string>
    <string name="desc_prev_button">Previous Button Desc</string>
    <string name="timer_default">00:00:00</string>
    <string name="label_email">Email:</string>
    <string name="label_phone">Phone:</string>
    <string name="label_mobile">Mobile:</string>
    <string name="footer_copyright">Copyright \u00A9, RadioCore </string>
    <string name="desc_small_logo">small logo desc</string>
    <string name="sample_metadata_string">Travis Scott - Holiday</string>

    <!--Preference entries and values-->
    <string-array name="settings_timer_entries">
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>4 hours</item>
        <item>5 hours</item>
    </string-array>

    <string-array name="settings_timer_entries_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <!--End of preference entries and values-->

</resources>
