<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    android:layout_margin="4dp"
    app:cardUseCompatPadding="true"
    tools:context=".activity.NewsDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/suez_one"
            android:text="@string/news_custom_headline"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_category_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="Category:"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/text_category"
            app:layout_constraintTop_toTopOf="@+id/text_date" />

        <TextView
            android:id="@+id/text_publishedon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Published:"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/text_date"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/text_headline"
            app:layout_constraintTop_toTopOf="@+id/text_date" />

        <TextView
            android:id="@+id/text_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:justificationMode="inter_word"
            android:text="@string/news_custom_category"
            android:textColor="@color/pink_A100"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/text_headline"
            app:layout_constraintTop_toTopOf="@+id/text_category_label" />

        <TextView
            android:id="@+id/text_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:justificationMode="inter_word"
            android:text="@string/news_custom_date"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toEndOf="@+id/text_publishedon"
            app:layout_constraintTop_toBottomOf="@+id/text_headline" />

        <TextView
            android:id="@+id/text_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-condensed"
            android:lineSpacingExtra="6sp"
            android:text="@string/news_custom_content"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/text_category"
            app:layout_constraintStart_toStartOf="@+id/text_publishedon"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_category" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>